--- a/src/styles.less
+++ b/src/styles.less
@@ -1,6 +1,11 @@
 @primary-color: #EA1D2C;
 @green-color: #4ec353;
 
+:root {
+  --matter-primary-rgb: 234, 29, 44; // A mesma cor do @primary-color só que em rgb
+  --matter-onprimary-rgb: 255, 255, 255;
+}
+
 * {
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
@@ -39,38 +44,24 @@ body {
   margin: 0 auto;
 }
 
-.button {
-  background-color: @primary-color;
-  border: none;
-  border-radius: 5px;
-  padding: 12px 18px;
-  display: inline-block;
+button {
   outline: none;
-  cursor: pointer;
-  display: flex;
+  display: flex !important;
   align-items: center;
   color: white;
 
-  &:hover {
-    background-color: lighten(@primary-color, 4%);
-  }
-  &:active {
-    background-color: darken(@primary-color, 4%);
-  }
-  &:focus {
-    box-shadow: 0 0 0 4px fadeout(@primary-color, 60%);
-  }
-
-  &--big {
+  &.big {
     font-size: 18px;
     font-weight: bold;
+    line-height: 26px !important;
     text-transform: uppercase;
-    padding: 16px 20px;
+    padding: 12px 18px !important;
+    height: initial !important;
   }
 }
 
-.button img,
-.button .icon {
+button img,
+button .icon {
   height: 26px;
   width: 26px;
   margin-right: 10px;
