docs: Criação do README.md

--- a/src/styles.less
+++ b/src/styles.less
@@ -400,7 +400,8 @@ header {
     opacity: .7;
   }
 
-  &__price {
+  .plate__discount,
+  .plate__price {
     margin-top: 10px;
     font-size: 18px;
   }
